added feature for issue
admin update
-title
-contact of bug issuer
-how bug happened
